<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
    </group>

    <item android:title="@string/our_work">
        <menu>
            <item
                android:id="@+id/nav_volunteer"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/volunteer" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
