<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sdsu.androidfinal.androidfinalproject.RegisterUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="120sp"
        android:paddingBottom="120sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_registration_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_registration"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_nickname"
            android:paddingTop="16sp"
            android:hint="@string/nickname"
            android:inputType="textPersonName|textCapWords"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_email"
            android:paddingTop="16sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_password"
            android:paddingTop="16sp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16sp"
            android:id="@+id/user_role"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16sp"
            android:id="@+id/sign_up_button"
            android:text="@string/sign_up"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:visibility="gone" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/already_registered"
            android:paddingBottom="16sp"
            android:paddingRight="16sp"
            android:textColor="#662451"
            android:textStyle="italic"
            android:text="@string/already_registered_text"/>
    </LinearLayout>

</FrameLayout>
